Refactor: Implement enums across all feature classes for type safety